[package]
name = "realtime_stock_ticker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] } # Ensure this version is consistent
tungstenite = "0.20"          # Match the version used by tokio-tungstenite
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
url = "2.5.2"
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
quanta = "0.10.0"

